--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -2,6 +2,7 @@
 log4j.rootLogger=DEBUG, A1
 log4j.logger.org.apache.http=ERROR
 log4j.logger.com.amazonaws=ERROR
+log4j.logger.com.mchange=ERROR
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
