dynamically configurable game configuration, courtesy of zookeeper
TODO: make zookeeper host more intelligent

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -3,6 +3,21 @@ log4j.rootLogger=DEBUG, A1
 log4j.logger.org.apache.http=ERROR
 log4j.logger.com.amazonaws=ERROR
 log4j.logger.com.mchange=ERROR
+log4j.logger.org.apache.zookeeper.ClientCnxn=ERROR
+log4j.logger.org.apache.zookeeper.ZooKeeper=ERROR
+log4j.logger.org.eclipse.jetty.util.component.Container=ERROR
+log4j.logger.org.eclipse.jetty.util.component.AbstractLifeCycle=ERROR
+log4j.logger.org.eclipse.jetty.server.handler.AbstractHandler=ERROR
+log4j.logger.com.netflix.curator.framework.imps.CuratorFrameworkImpl=ERROR
+log4j.logger.com.netflix.curator.CuratorZookeeperClient=ERROR
+log4j.logger.com.netflix.curator.ConnectionState=ERROR
+log4j.logger.com.netflix.curator.framework.state.ConnectionStateManager=ERROR
+log4j.logger.com.netflix.curator.RetryLoop=ERROR
+log4j.logger.com.netflix.curator.ConnectionState=FATAL
+log4j.logger.org.eclipse.jetty.server.Server=ERROR
+log4j.logger.org.eclipse.jetty.io.nio=ERROR
+log4j.logger.org.eclipse.jetty.http.HttpParser=ERROR
+log4j.logger.org.apache.zookeeper.ClientCnxnSocketNIO=ERROR
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
