--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -18,6 +18,7 @@ log4j.logger.org.eclipse.jetty.server.Server=ERROR
 log4j.logger.org.eclipse.jetty.io.nio=ERROR
 log4j.logger.org.eclipse.jetty.http.HttpParser=ERROR
 log4j.logger.org.apache.zookeeper.ClientCnxnSocketNIO=ERROR
+log4j.logger.org.apache.zookeeper.client.ZooKeeperSaslClient=ERROR
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
