--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -17,6 +17,7 @@ log4j.logger.com.netflix.curator.ConnectionState=FATAL
 log4j.logger.org.eclipse.jetty.server.Server=ERROR
 log4j.logger.org.eclipse.jetty.io.nio=ERROR
 log4j.logger.org.eclipse.jetty.http.HttpParser=ERROR
+log4j.logger.org.eclipse.jetty.server.AsyncHttpConnection=ERROR
 log4j.logger.org.apache.zookeeper.ClientCnxnSocketNIO=ERROR
 log4j.logger.org.apache.zookeeper.client.ZooKeeperSaslClient=ERROR
 
